--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,10 @@ form {
     margin: 20px 0 20px 0;
 }
 
+label {
+    display: block;
+}
+
 .text {
     display: flex;
     flex-direction: column;
@@ -46,7 +50,7 @@ select {
     margin-bottom: 20px;
 }
 
-#error {
+.error {
     color: red;
     font-weight: bold;
     margin-bottom: 20px;
